[package]
name = "rustcheat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "winuser", "winnt", "windef", "libloaderapi"] }
detour = "0.8.1"
jni = "0.19.0"